--- a/index.html
+++ b/index.html
@@ -1,30 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andre Mposa | Python Developer</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Andre Mposa | Python Developer Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #121212;
+      color: #f5f5f5;
+      margin: 0;
+      padding: 2rem;
+    }
+
+    h1 {
+      color: #00ffff;
+    }
+
+    .project {
+      background: #1e1e1e;
+      padding: 1rem;
+      border-radius: 10px;
+      margin-bottom: 1.5rem;
+    }
+
+    a {
+      color: #00ffff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Andre Mposa</h1>
-        <p>Aspiring Python Developer</p>
-    </header>
 
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li>
-                <strong>Mini Text & Temperature Toolkit App</strong><br>
-                <a href="https://github.com/your-AndreMposa/python-portfolio" target="_blank">View on GitHub</a>
-            </li>
-            <!-- Add more projects here as you build them -->
-        </ul>
-    </section>
+  <h1>Andre Mposa</h1>
+  <p>Python Developer in the making. Grinding one line of code at a time.</p>
 
-    <footer>
-        <p>Connect with me: andremposa59@gmail.com</p>
-    </footer>
+  <h2>📁 Projects</h2>
+
+  <div class="project">
+    <h3>🧰 Toolkit App</h3>
+    <p>A simple text and temperature converter built with Python.</p>
+    <a href="https://github.com/AndreMposa/portfolio-site" target="_blank">View on GitHub</a>
+  </div>
+
 </body>
 </html>
