--- a/index.html
+++ b/index.html
@@ -1,50 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Andre Mposa | Python Developer Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #121212;
-      color: #f5f5f5;
-      margin: 0;
-      padding: 2rem;
-    }
-
-    h1 {
-      color: #00ffff;
-    }
-
-    .project {
-      background: #1e1e1e;
-      padding: 1rem;
-      border-radius: 10px;
-      margin-bottom: 1.5rem;
-    }
-
-    a {
-      color: #00ffff;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Andre Mposa | Developer Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Andre Mposa</h1>
+    <p>Python Developer | Aspiring Quant/Algo Trader</p>
+  </header>
 
-  <h1>Andre Mposa</h1>
-  <p>Python Developer in the making. Grinding one line of code at a time.</p>
+  <section id="projects">
+    <h2>My Projects</h2>
 
-  <h2>📁 Projects</h2>
+    <div class="project-card">
+      <h3>Toolkit App 🧰</h3>
+      <p>A simple command-line tool with a text converter and temperature converter written in Python.</p>
+      <a href="https://github.com/AndreMposa/python-portfolio/blob/main/toolkit_app.py" target="_blank">View on GitHub</a>
+    </div>
 
-  <div class="project">
-    <h3>🧰 Toolkit App</h3>
-    <p>A simple text and temperature converter built with Python.</p>
-    <a href="https://github.com/AndreMposa/portfolio-site" target="_blank">View on GitHub</a>
-  </div>
+    <!-- You can add more projects here -->
+  </section>
 
+  <footer>
+    <p>Built with 💻 by Andre Mposa | <a href="https://github.com/AndreMposa" target="_blank">GitHub Profile</a></p>
+  </footer>
 </body>
 </html>
