Fix GitHub link for Toolkit App

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Andre Mposa | Developer Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Andre Mposa | Portfolio</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
@@ -12,20 +12,19 @@
     <p>Python Developer | Aspiring Quant/Algo Trader</p>
   </header>
 
-  <section id="projects">
-    <h2>My Projects</h2>
-
-    <div class="project-card">
-      <h3>Toolkit App 🧰</h3>
-      <p>A simple command-line tool with a text converter and temperature converter written in Python.</p>
-      <a href="https://github.com/AndreMposa/python-portfolio/blob/main/toolkit_app.py" target="_blank">View on GitHub</a>
-    </div>
-
-    <!-- You can add more projects here -->
-  </section>
+  <main>
+    <section class="projects">
+      <h2>My Projects</h2>
+      <div class="project-card">
+        <h3>Toolkit App 🧰</h3>
+        <p>A simple command-line tool with a text converter and temperature converter written in Python.</p>
+        <a href="https://github.com/AndreMposa/toolkit-app" target="_blank">View on GitHub</a>
+      </div>
+    </section>
+  </main>
 
   <footer>
-    <p>Built with 💻 by Andre Mposa | <a href="https://github.com/AndreMposa" target="_blank">GitHub Profile</a></p>
+    <p>Built with 🖤 by Andre Mposa | <a href="https://github.com/AndreMposa" target="_blank">GitHub Profile</a></p>
   </footer>
 </body>
 </html>
