--- a/index.html
+++ b/index.html
@@ -7,38 +7,32 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-
   <header>
-    <nav>
-      <ul class="nav-list">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#about">About</a></li>
-      </ul>
-    </nav>
-    <h1 id="home">Andre Mposa</h1>
+    <h1>Andre Mposa</h1>
     <p>Python Developer | Aspiring Quant/Algo Trader</p>
   </header>
 
   <main>
-    <section id="projects" class="projects">
+    <section id="projects">
       <h2>My Projects</h2>
+
       <div class="project-card">
         <h3>Toolkit App 🧰</h3>
-        <p>A simple command-line tool with a text converter and temperature converter written in Python.</p>
-        <a href="https://github.com/AndreMposa/toolkit-app" target="_blank" rel="noopener noreferrer">View on GitHub</a>
+        <p>A simple command-line tool with a text and temperature converter written in Python.</p>
+        <a href="https://github.com/AndreMposa/toolkit-app" target="_blank">View on GitHub</a>
       </div>
-    </section>
 
-    <section id="about" class="about">
-      <h2>About Me</h2>
-      <p>Hi, I’m Andre. I’m passionate about Python development and quant trading. I build practical projects that solve real-world problems. Currently focusing on improving my skills and creating impactful software.</p>
+      <div class="project-card">
+        <h3>Currency Converter 💱</h3>
+        <p>A Python app that converts currencies using real-time exchange rates from an API.</p>
+        <a href="https://github.com/AndreMposa/currency-converter" target="_blank">View on GitHub</a>
+      </div>
+
     </section>
   </main>
 
   <footer>
-    <p>Built with 🖤 by Andre Mposa | <a href="https://github.com/AndreMposa" target="_blank" rel="noopener noreferrer">GitHub Profile</a></p>
+    <p>Built with 🖤 by Andre Mposa | <a href="https://github.com/AndreMposa" target="_blank">GitHub Profile</a></p>
   </footer>
-
 </body>
 </html>
