Updated portfolio with recent projects including Expense Calculator

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <a href="https://github.com/AndreMposa/currency-converter" target="_blank">View on GitHub</a>
       </div>
 
+      <div class="project-card">
+        <h3>Expense Calculator 💸</h3>
+        <p>A command-line Python app to track and calculate your daily expenses with summaries and totals.</p>
+        <a href="https://github.com/AndreMposa/expense-calculator" target="_blank">View on GitHub</a>
+      </div>
+
     </section>
   </main>
 
